tests/error/tensor_errors/too_few_args.err
Error: Not enough arguments (at $FILE:12:24)
   | 
10 | @guppy(module)
11 | def main() -> int:
12 |     return (foo, foo)(42)
   |                         ^ Missing argument (expected 2, got 1)

Note: Function signature is `(int, int) -> (int, int)`

Guppy compilation failed due to 1 previous error
